crates/dbdict/tests/snapshots/rich__unsupported_version_is_rejected_with_supported_list.snap
---
source: crates/dbdict/tests/rich.rs
---
$version: "0.3.0"
tables: []
────────────────────────────────────────
error: [version]
 --> dict.yaml:1:11
  |
1 | $version: "0.3.0"
  |           ^^^^^ `0.3.0` is not a supported spec version
  |
  = help: Supported versions: "0.1.0" (legacy), "0.2.0" (rich/duckdb).
